--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 Options All -Indexes
 RewriteEngine On
-RewriteRule ^([-a-zA-Z0-9]+)$ index.php?ruta=$1
+RewriteRule ^([-a-zA-Z0-9]+)$ index.php?rout=$1
